--- a/Task1LoginRegister/Areas/Admin/Views/Products/Edit.cshtml
+++ b/Task1LoginRegister/Areas/Admin/Views/Products/Edit.cshtml
@@ -204,7 +204,7 @@
         </div>
 
         <div class="form-group mt-4">
-            <button type="submit" class="btn btn-primary btn-lg"><i class="fas fa-save"></i> Save Changes</button>
+            <button type="submit" class="btn btn-primary"><i class="fas fa-save"></i> Save Changes</button>
         </div>
     </form>
 </div>
