#Created Inventory report page and pdf generation for product performance

--- a/Task1LoginRegister/Areas/Admin/Views/Report/Index.cshtml
+++ b/Task1LoginRegister/Areas/Admin/Views/Report/Index.cshtml
@@ -90,7 +90,7 @@
                     <h6 class="mb-0 fw-bold">Sales Report</h6>
                 </div>
                 <div class="card-body">
-                    <p>Voew detailes saled data by date range. Analyze revenue trends, order volumes, and more.</p>
+                    <p>View detailes saled data by date range. Analyze revenue trends, order volumes, and more.</p>
                     <a asp-action="SalesReport" asp-area="Admin" asp-asp-controller="Report" class="btn btn-outline-primary">
                         <i class="fas fa-chart-line me-1"></i> View Sales Reports
                     </a>
@@ -133,7 +133,7 @@
                 </div>
                 <div class="card-body">
                     <p>Monitor product inventory, stock levels, and product status across categories.</p>
-                    <a asp-action="InventoryStatus" asp-area="Admin" asp-asp-controller="Report" class="btn btn-outline-warning">
+                    <a asp-action="InventoryReport" asp-area="Admin" asp-asp-controller="Report" class="btn btn-outline-warning">
                         <i class="fas fa-warehouse  me-1"></i> View Inventory Reports
                     </a>
                 </div>
