#Created common service and profit loss dto and calculation for report

--- a/Task1LoginRegister/Areas/Admin/Views/Report/InventoryReport.cshtml
+++ b/Task1LoginRegister/Areas/Admin/Views/Report/InventoryReport.cshtml
@@ -14,7 +14,7 @@
                 <h2><i class="fas fa-warehouse  me-1"></i> Inventory Report</h2>
                 <div>
                     <a asp-action="Index" asp-controller="Report" class="btn btn-sm btn-outline-secondary"><i class="fas fa-arrow-left"></i> Back to Report</a>
-                    <a asp-action="ExportProductPerformaceReport" asp-controller="Report" asp-route-startDate="@startDate" asp-route-endDate="@endDate" class="btn btn-sm btn-outline-success"><i class="fas fa-file-export"></i> Export Report</a>
+                    <a asp-action="ExportInventoryReport" asp-controller="Report" asp-route-startDate="@startDate" asp-route-endDate="@endDate" class="btn btn-sm btn-outline-success"><i class="fas fa-file-export"></i> Export Report</a>
                 </div>
             </div>
             <!-- date filters -->
