#Added Profit loss report view with charts and allowed to download

--- a/Task1LoginRegister/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Task1LoginRegister/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -113,8 +113,8 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" asp-area="Admin" asp-controller="AdminOrders" asp-action="Pending">
-                            <span>Pending Orders</span>
+                        <a class="nav-link" asp-area="Admin" asp-controller="Report" asp-action="ProfitLossReport">
+                            <span>Profit Loss Report</span>
                         </a>
                     </li>
                 </ul>
